fixed igarss post

--- a/_posts/2023-07-17-igarss.md
+++ b/_posts/2023-07-17-igarss.md
@@ -5,11 +5,13 @@ image: images/igarss_poster.jpg
 
 Hersh Vakharia presented a poster for "Efficient Multi-Resolution Fusion for Remote Sensing Data with Label Uncertainty" at the 2023 IEEE International Geoscience and Remote Sensing Symposium (IGARSS) in Pasadena, CA.
 
-![igarss2023](images/igarss_poster.jpg)
+{% include figure.html image="images/igarss-poster-pres.jpg" %}
 
 Links
 - [IEEEXplore](https://ieeexplore.ieee.org/document/10282851)
-- [arXiv]()
-- [Repo]()
+- [arXiv](https://arxiv.org/abs/2402.05045)
+- [Repo](https://github.com/hvak/MIMRF-BFM)
+- [Poster](https://hvak.io/files/igarss_poster_final.pdf)
+
 
 
